vlib/v/checker/tests/generics_type_para_index_err.vv
fn show_element<T>(arr &T) string {
	return unsafe { '${arr[1]}' }
}

fn main() {
	a := [1, 2, 3]!
	ret := show_element(a)
	println(ret)
}
